<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PWN Streak</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="APP_ID">605513452859197</string>
    <string name="title_activity_login">PWN Streak</string>
    <string name="title_activity_login_activity2">PWN Streak</string>
    <string name="disclaimer">Disclaimer: To use this app, you will need a reliable internet connection</string>
    <string name="title_activity_signup">PWN Streak</string>
    <string name="create_account_string">Create Account</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="this_month_text">This Month</string>
    <string name="total_picks_text">Total Picks:</string>
    <string name="total_wins_text">Wins:</string>
    <string name="total_losses_text">Losses:</string>
    <string name="longest_streak_text">Longest Streak:</string>
    <string name="winning_percentage_text">Winning Percentage:</string>
    <string name="pick_history_text">Pick History</string>
    <string name="stats_date_text">Date:</string>
    <string name="stats_pick_text">Pick:</string>
    <string name="stats_result_text">Result:</string>
    <string name="banner_pwnstreak_string">Pwnstreak Banner</string>
    <string name="streak_string">Your Streak</string>
    <string name="overall_string">Overall Record</string>
    <string name="dash_string">-</string>
    <string name="w_char">W</string>
    <string name="streak_number">19</string>
    <string name="overall_win_string">14</string>
    <string name="overall_loss_string">7</string>

</resources>
