<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:paddingTop="8dip"
        android:paddingBottom="8dip"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:background="#ffffff"
        android:gravity="left"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/banner_pwnstreak_string"
            android:gravity="left"
            android:layout_gravity="left"
            android:adjustViewBounds="true"
            android:maxWidth="250dp"
            android:maxHeight="90dp"
            android:scaleType="fitXY"
            android:src="@drawable/pwnstreak" />
        
        <TableLayout
            android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="right"
			android:layout_gravity="right"
			android:orientation="vertical" >
            
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="-5dp"
                android:gravity="right"
                android:paddingLeft="6dip"
                android:layout_gravity="right" >
                
                    <TextView
                        android:layout_column="1"
			            android:layout_width="fill_parent"
			            android:paddingTop="10dp"
			            android:layout_height="wrap_content"
						android:gravity="bottom"
						android:textColor="#000000"
						android:layout_gravity="bottom"
						android:textSize="13sp"
			            android:text="@string/streak_string" />
            </TableRow>
            
            <TableRow
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_margin="-5dp"
                android:gravity="center_horizontal" 
                android:layout_gravity="center_horizontal" >              
                    
	                    <TextView
	                        android:layout_column="1"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:lines="1"
	                        android:maxLines="1"
	                        android:gravity="top"
	                        android:layout_gravity="right"
	                        android:textSize="37sp"
	                        android:textColor="#f06000"
	                        android:text="@string/w_char" />
	                    
	                    <TextView
	                        android:id="@+id/current_streak_text"
	                        android:layout_column="1"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:layout_gravity="left"
	                        android:gravity="top"
	                        android:textSize="37sp"
	                        android:text="19" />
            </TableRow>
            
        </TableLayout>

    </LinearLayout>
